--- a/Vision/templates/BaseVision.html
+++ b/Vision/templates/BaseVision.html
@@ -70,6 +70,6 @@
             <img class="ft-imgs" src="{% static 'img/MangaVision-ajustado.svg' %}" width="180px" height="50" alt="">
         </div>
     </footer>
-    <script src="{% static 'js/menu.vision.js' %}"></script>
+    <script src="{% static 'js/site.vision.js' %}"></script>
 </body>
 </html>
