--- a/Vision/static/css/carousel.css
+++ b/Vision/static/css/carousel.css
@@ -103,11 +103,14 @@ h5 {
 }
 
 .card-title1 {
-    margin: 0;
     color: #fff;
-    text-align: center;
     font-size: 17px;
     font-family: 'Roboto Regular';
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 @media screen and (max-width: 500px) {
