--- a/Vision/static/css/contato.css
+++ b/Vision/static/css/contato.css
@@ -1,23 +1,21 @@
 .positive {
     color: rgb(0, 255, 0) !important;
-    font-size: 14px;
     font-weight: 500;
 }
 
 .negative {
     color: rgb(255, 0, 0) !important;
-    font-size: 15px;
     font-weight: 500;
 }
 
 .normal {
     color: deepskyblue !important;
-    font-size: 15px;
     font-weight: 500;
 }
 
 dt {
-    font-family: 'Groteska'
+    font-family: 'Groteska';
+    font-size: 14;
         /* font-family: 'Proda Sans' */
 }
 
@@ -25,6 +23,26 @@ dd {
     color: #fff !important;
     font-size: 15px;
     margin-left: 15px;
+}
+
+@media screen and (max-width: 1165px) {
+    dd {
+        font-size: 12px;
+    }
+
+    dt{
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    dd {
+        font-size: 10px;
+    }
+
+    dt{
+        font-size: 11px;
+    }
 }
 
 p {
@@ -79,7 +97,6 @@ input::placeholder {
 }
 
 .cont2 {
-    padding: 20px !important;
     border-radius: 0.375rem 0 0 0.375rem;
     background-color: rgba(0, 0, 0, 50%) !important;
     height: 540px;
