--- a/Vision/templates/contato.html
+++ b/Vision/templates/contato.html
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="test">
         <div class="row">
-            <div class="cont2 col-md-6">
+            <div class="cont2 col-lg-6">
                 {% bootstrap_messages %}
                 <div class="cont3">
                     <img src="{% static 'img/MangaVision-ajustado.svg' %}" width="30%" alt="Test">
@@ -26,7 +26,7 @@
                     <dt class="normal">Sugestões de séries para serem adicionadas em nosso site podem ser sugeridas em nosso discord ou em nossas redes sociais (Discord de preferência)</>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <form action="{% url 'contato.html' %}" method="post" class="form-control size" autocomplete="off">
                     {% csrf_token %}
                     {% bootstrap_form form %}
