Atualização de erros

--- a/Vision/templates/503.html
+++ b/Vision/templates/503.html
@@ -8,10 +8,10 @@
         <div class="txt">Serviço Indisponível<span class="blink">_</span></div>
     </div>
     <div class="div-cont">
-        <p>✌ Eai tudo bem? ✌</p>
+        <p>Eai tudo bem? ✌</p>
         <p>• O erro 503 indica que o servidor está temporariamente indisponível.</p>
-        <p>👌 Agora que você entendeu, por favor, retire-se dessa pagina usando o botão abaixo. 😊</p>
-        <p>👋 A equipe do Manga Vision agradece 😘</p>
+        <p>Agora que você entendeu, por favor, retire-se dessa pagina usando o botão abaixo.</p>
+        <p>A equipe do Manga Vision agradece 😘</p>
     </div>
     <div class="div-cont2">
         <button class="btn btn-primary" onclick="window.location.href='{% url 'index' %}'">Tela Inicial</button>
