--- a/Vision/templates/504.html
+++ b/Vision/templates/504.html
@@ -8,10 +8,10 @@
         <div class="txt">Demorou para Responder<span class="blink">_</span></div>
     </div>
     <div class="div-cont">
-        <p>✌ Eai tudo bem? ✌</p>
+        <p>Eai tudo bem? ✌</p>
         <p>• O erro 504 é um tipo de erro de servidor, relacionado a expiração do tempo de resposta para um segundo servidor.</p>
-        <p>👌 Agora que você entendeu, por favor, retire-se dessa pagina usando o botão abaixo. 😊</p>
-        <p>👋 A equipe do Manga Vision agradece 😘</p>
+        <p>Agora que você entendeu, por favor, retire-se dessa pagina usando o botão abaixo.</p>
+        <p>A equipe do Manga Vision agradece 😘</p>
     </div>
     <div class="div-cont2">
         <button class="btn btn-primary" onclick="window.location.href='{% url 'index' %}'">Tela Inicial</button>
