Atualização do site

--- a/Vision/templates/manga_info.html
+++ b/Vision/templates/manga_info.html
@@ -26,7 +26,7 @@
             <div class="col-lg bg-light rl-col3">
                 <p>Status: {{ status }}</p>
                 <p>Ano de Lançamento: {{ manga.release_Year }}</p>
-                <p>Tipo: {{ tipo }}</p>
+                <p>Tipo: {{ manga.type_manga }}</p>
             </div>
             <div class="rl-manga-snps">
                 <p class="rl-manga-sinopse">{{ manga.sinopse }}</p>
