--- a/Vision/templates/index.html
+++ b/Vision/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block titulo %}Manga Vision{% endblock %}
 {% block body %}
-    <h1 class="neon-vision">Bem-Vindo ao Manga Vision!!</h1>
+    <h1 class="neon-vision">Bem-Vindo ao Manga Vision!!!!!</h1>
         <div>
             <h2 class="font">Lançamentos</h2>
         </div>
