--- a/Vision/templates/BaseVision.html
+++ b/Vision/templates/BaseVision.html
@@ -54,6 +54,9 @@
                             <a class="nav-link active fonte_mv" href="{% url 'party.html' %}"><span class="Party"></span>Party</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active fonte_mv" href="{% url 'store.html' %}"><span class="Store"></span>Manga Store</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active fonte_mv" href="{% url 'contato.html' %}"><span class="Contato"></span>Contatos</a>
                         </li>
                     </ul>
