Foi adicionado o botão de voltar ao topo, realizei o ajusta na navbar para não conflitar com o botão de voltar ao topo e o mesmo ajuste foi feito no footer, tambem foi ajustado a navbar na parte de leitura do capitulo do manga e o mesmo vai sempre ficar travado no topo da tela para não atrapalahr a leitura

--- a/Vision/static/css/Site.css
+++ b/Vision/static/css/Site.css
@@ -331,3 +331,56 @@ a.rl-link{
     border-color: rgba(255, 255, 255, 0.5);
 }
 /* Fim Formulario */
+
+
+/* Button Top */
+#btnVoltarAoTopo {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgb(168, 238, 89);
+    color: white;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+#btnVoltarAoTopo:hover {
+    background-color: rgb(126, 179, 66);
+}
+
+#btnVoltarAoTopoIndex {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgb(168, 238, 89);
+    color: white;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+#btnVoltarAoTopoIndex:hover {
+    background-color: rgb(126, 179, 66);
+}
+
+.arrow {
+    width: 30px;
+    height: 30px;
+}
+
+.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+/* Fim Button Top */
