--- a/Vision/templates/index.html
+++ b/Vision/templates/index.html
@@ -70,4 +70,6 @@
                 </div>
             </div>
         </div>
+        <button onclick="voltarAoTopoIndex()" id="btnVoltarAoTopoIndex" title="Voltar ao topo"><img class="arrow" src="{% static 'img/seta.png' %}" alt=""></button>
+        <script src="{% static 'js/button_up2.vision.js' %}"></script>
 {% endblock %}
