Atualização do site; criação da lista de mangás

--- a/Vision/static/css/Site.css
+++ b/Vision/static/css/Site.css
@@ -9,7 +9,8 @@
 }
 
 body {
-    background: url(../img/Tela/pattern-populares.png);
+    /* background: url(../img/Tela/pattern-populares.png); */
+    background: url(../img/pattern/green.png);
     background-color: #191a1c;
     padding-top: 70px !important;
 }
