--- a/Vision/static/css/carousel.css
+++ b/Vision/static/css/carousel.css
@@ -57,6 +57,11 @@ a.cd-link {
     color: #B3C23F;
 }
 
+.card-manga{
+    /* width: 14.8% !important; */
+    margin-top: 20px;
+}
+
 
 /* Card dos Mangas */
 .isso {
